Terminando detalles interfaz y Haciendo Gramática

--- a/Codigo/P2_OLC1_DIC23/src/GUI/GUI.form
+++ b/Codigo/P2_OLC1_DIC23/src/GUI/GUI.form
@@ -82,21 +82,10 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto Mono" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="StatPy"/>
+                <Property name="text" type="java.lang.String" value="Javan"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem5ActionPerformed"/>
-              </Events>
-            </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem6">
-              <Properties>
-                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="Roboto Mono" size="14" style="0"/>
-                </Property>
-                <Property name="text" type="java.lang.String" value="JSON"/>
-              </Properties>
-              <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem6ActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
@@ -152,11 +141,30 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto Mono" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Errores L&#xe9;xicos"/>
+                <Property name="text" type="java.lang.String" value="Errores"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem8ActionPerformed"/>
               </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem6">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Roboto Mono" size="14" style="0"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Generar AST"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem6ActionPerformed"/>
+              </Events>
+            </MenuItem>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem9">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Roboto Mono" size="14" style="0"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Tabla Simbolos"/>
+              </Properties>
             </MenuItem>
           </SubComponents>
         </Menu>
@@ -165,7 +173,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="StatPy Convertor"/>
+    <Property name="title" type="java.lang.String" value="Java en &#xd1;"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
